# gemup_marketplace

./: .coverage  .coveragerc  .dockerignore  .env  .env.render  .env.test  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  create_test_data.py  docker-compose.dev.yml  docker-compose.yml  migrate.py  pyproject.toml  pytest.ini  render.yaml
alembic/: env.py  env.py.backup
alembic/versions/: 0f199cc840c3_add_new_field.py  0f4151af27cb_add_proxy_categories_and_farming_fields.py  0faaafbe3d08_fix_default_values_and_nullable_.py  1e835121a8c1_new_migration.py  31851406acc6_initial_migration_with_correct_enum_.py  60d83fb5fc6e_rename_metadata_to_provider_metadata_in_.py  71bb61f20470_new_migration.py  74a33b705652_fix_user_model_boolean_fields_with_.py  7b6395202d50_add_server_default_for_boolean_fields.py  99f794ca3777_fix_default_values_and_nullable_.py  final_boolean_fix.py  fix_boolean_server_defaults.py
app/core/: auth.py  auth_bearer.py  background_tasks.py  circuit_breaker.py  config.py  db.py  dependencies.py  exceptions.py  init.sql  logging_config.py  main.py  middleware.py  migrations.py  rate_limiter.py  redis.py  security.py
app/crud/: __init__.py  api_key.py  balance_topup.py  base.py  order.py  permission.py  proxy_product.py  proxy_purchase.py  shopping_cart.py  transaction.py  user.py
app/integrations/: __init__.py  base.py  cryptomus.py  proxy_711.py
app/middleware/: monitoring.py
app/models/: __init__.py  models.py
app/routes/: __init__.py  auth.py  cart.py  orders.py  payments.py  products.py  proxies.py  users.py
app/schemas/: __init__.py  api_key.py  base.py  cart.py  order.py  payment.py  permission.py  product.py  proxy_product.py  proxy_purchase.py  shopping_cart.py  transaction.py  user.py
app/services/: __init__.py  auth_service.py  base.py  cart_service.py  order_service.py  payment_service.py  product_service.py  proxy_service.py
nextjs/: Dockerfile  Dockerfile.dev  next.config.js  next.confog.js
nginx/: nginx.conf
scripts/: data_mock.py  migrate.sh  start-dev.sh  start-prod.sh  start-render.sh  test.sh  update_render.py
tests/: conftest.py  test_simple.py
tests/api/: __init__.py  conftest.py  test_admin_api.py  test_auth_api.py  test_cart_api.py  test_error_handling.py  test_orders_api.py  test_payments_api.py  test_products_api.py  test_proxies_api.py  test_users_api.py
tests/integration/: test_auth_routes.py  test_cart_routes.py  test_full_order_flow.py  test_orders_routes.py  test_payments_routes.py  test_performance.py  test_products_routes.py  test_proxies_routes.py  test_security.py
tests/load/: locustfile.py  performance_test.py  stress_test.py  test_performance.py
tests/mocks/: __init__.py  fixtures.py  order_mocks.py  payment_mocks.py  proxy_mocks.py  service_mocks.py
tests/unit/: test_auth_service.py  test_cart_service.py  test_crud_transaction.py  test_crud_user.py  test_cryptomus_api.py  test_models.py  test_order_models.py  test_order_service.py  test_order_service_proxy_activation.py  test_payment_service.py  test_product_service.py  test_proxy_711_api.py  test_proxy_purchase_crud.py  (+3 more)
(+6 files in other folders)
