[project]
name = "gemup-marketplace"
version = "1.0.0"
description = "Marketplace for digital proxy products"
requires-python = ">=3.11"
authors = [
    {name = "Gemup Team", email = "team@gemup.com"},
]
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.1.0",
    "redis[hiredis]>=6.1.0",
    "passlib[bcrypt]>=1.7.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "celery[redis]>=5.3.0",
    "cryptography>=41.0.0",
    "email-validator>=2.1.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "itsdangerous>=2.1.0",
    "greenlet>=3.2.2",
    "aiohttp>=3.12.4",
    "locust>=2.37.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "aiosqlite>=0.19.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "factory-boy>=3.3.0",
    "faker>=20.0.0",
    "locust>=2.17.0",
    "aiohttp>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/alembic",
    "/alembic.ini",
    "/README.md",
    "/pyproject.toml",
]
exclude = [
    "/.git",
    "/.gitignore",
    "/Dockerfile*",
    "/docker-compose*.yml",
    "/.env*",
    "/Makefile",
    "/__pycache__",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",
    "W", 
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --disable-warnings --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PytestUnknownMarkWarning",
    "ignore::PytestDeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore::pytest.PytestDeprecationWarning",
    "ignore::passlib.utils.DeprecationWarning",
    "ignore",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "auth: marks tests related to authentication",
    "crud: marks tests related to CRUD operations",
    "api: marks tests related to API endpoints",
    "order: marks tests related to orders",
    "payment: marks tests related to payments",
    "proxy: marks tests related to proxies",
]
